First setup of the layout and information in the index, contact & about pages.

--- a/MJ-13/MJ-13/Views/Home/Index.cshtml
+++ b/MJ-13/MJ-13/Views/Home/Index.cshtml
@@ -3,29 +3,49 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Ministerio J13</h1>
+    <p class="lead">¡Bienvenidos sean todos a Ministerio J13! Esperamos que
+    puedan sentirse en familia y encontrar apoyo en su camino como lideres.</p>
+    <p>
+        <a href="https://www.biblegateway.com/passage/?search=Juan+13%3A13-15&version=NVI" class="btn btn-primary btn-lg">
+        Ver Cita Biblica &raquo;
+        </a>
+    </p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Jueves</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            La idea de una reunion los dias jueves es tener un Estudio Biblico
+            que nos ayude a fortalecer nuestros conocmientos y estar capacitados
+            para realizar diferentes actividades practicas que pueden ser utilizadas
+            como herramientas en nuestro transcurso como lideres, siervos de Cristo.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.facebook.com/GBCEstudioBiblico">Capacitaciones &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Domingo</h2>
+        <p>
+            ¡El Dia del Señor! Reunirnos este dia es muy grato y buscamos fortalecer
+            nuestra relacion personal con Dios disfrutando de su presencia a traves
+            de su palabra, oracion y un buen tiempo de alabanza a El. Tambien compartimos
+            buenos momentos y, como parte de nuestro programa, puedes participar demostrando
+            los dones que Dios te ha dado. Puedes contactarte con nosotros e involcurarte
+            en el link de abajo.
+        </p>
+        <p><a class="btn btn-default" href="mailto:Participacion@mjm13.com">Unirme &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Redes Sociales</h2>
+        <p>
+            Si eres de esas personas que les gusta estar informadas y pasar
+            tiempo en las redes sociales, este es tu espacio. Visita nuestra pagina
+            de Facebook, Twitter, Instagra, entre otras. En nuestras redes compartimos
+            contenido que te complementa nuestros otros programas, ayudandonos a crecer
+            espiritualmente, seguir capacitandonos y estar al tanto de todas nuestras
+            actividades, siguenos en nuestras redes como MJ-13
+        </p>
+        <p><a class="btn btn-default" href="https://facebook.com">Siguenos &raquo;</a></p>
     </div>
 </div>
