--- a/MJ-13/MJ-13/Views/Home/About.cshtml
+++ b/MJ-13/MJ-13/Views/Home/About.cshtml
@@ -4,4 +4,30 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h4>Sobre Nosotros...</h4>
+<p>Somos un ministerio que busca capacitar nuevos lideres que esten dispuestos
+    a servir en distintos campos; desde ayudar a un vecino, hasta cumplir la obra
+    misionera en otros paises. Estamos comprometidos con dar lo mejor de cada
+    persona que busca servir en la obra de Dios, el engrandecimiento del reino
+    de los cielos.</p>
+<p>Ofrecemos capacitaciones en distintas areas practicas y espirituales que
+    pueden servir a lideres para utilizar en distintas actividades, misiones o
+    en sus congregaciones. Nos interesa el crecimiento integral de cada uno
+    de nuestros participantes, tal como dice 3 Juan 1:2. Por lo cual, tenemos
+    reuniones en donde aprendemos de la Biblia y nos motivamos a continuar la
+    carrera y la buena batalla de la fe. Entre las areas practicas que cubrimos
+    se encuentran:</p>
+<ul>
+    <li>Campamentos</li>
+    <li>Misiones</li>
+    <li>Predicas</li>
+    <li>Organizacion</li>
+    <li>Eventos</li>
+    <li>Juegos</li>
+    <li>Estudios Biblicos</li>
+    <li>Talleres</li>
+    <li>Dinamicas</li>
+    <li>Manualidades</li>
+    <li>Alabanza</li>
+    <li>Evangelismo</li>
+</ul>
