--- a/MJ-13/MJ-13/Views/Home/Contact.cshtml
+++ b/MJ-13/MJ-13/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Guatemala<br />
+    Centroamerica<br />
+    <abbr title="Phone">Telefono:</abbr>
+    +502 ####-###
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Capacitaciones:</strong>   <a href="mailto:Capacitaciones@mjm13.com">capacitaciones@mjm13.com</a><br />
+    <strong>Peticiones:</strong> <a href="mailto:Peticiones@mjm13.com">peticiones@mj13.com</a>
 </address>
