--- a/MJ-13/MJ-13/Views/Programa/Details.cshtml
+++ b/MJ-13/MJ-13/Views/Programa/Details.cshtml
@@ -1,29 +1,29 @@
 ﻿@model MJ_13.Models.Programas
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Info";
 }
 
-<h2>Details</h2>
+<h2>Info</h2>
 
 <div>
     <h4>Programas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Lider.Nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Lider.Nombre)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Programa)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Programa)
+        </dd>
+
+        <dt>
+            Encargado
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Lider.Nombre)
         </dd>
 
         <dt>
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Regresar a la lista", "Index")
 </p>
