--- a/MJ-13/MJ-13/Views/Actividad/Create.cshtml
+++ b/MJ-13/MJ-13/Views/Actividad/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MJ_13.Models.Actividades
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Nueva Actividad";
 }
 
-<h2>Create</h2>
+<h2>Crear</h2>
 
 
 @using (Html.BeginForm()) 
@@ -131,14 +131,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar a la lista", "Index")
 </div>
 
 @section Scripts {
