--- a/MJ-13/MJ-13/Views/Actividad/Edit.cshtml
+++ b/MJ-13/MJ-13/Views/Actividad/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MJ_13.Models.Actividades
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 
 @using (Html.BeginForm())
