--- a/MJ-13/MJ-13/Views/Home/Index.cshtml
+++ b/MJ-13/MJ-13/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>Ministerio J13</h1>
-    <p class="lead">¡Bienvenidos sean todos a Ministerio J13! Esperamos que
+    <h1 style="color: #c03b7a;">Ministerio J13</h1>
+    <p style="color: #141e4d;">¡Bienvenidos sean todos a Ministerio J13! Esperamos que
     puedan sentirse en familia y encontrar apoyo en su camino como lideres.</p>
     <p>
         <a href="https://www.biblegateway.com/passage/?search=Juan+13%3A13-15&version=NVI" class="btn btn-primary btn-lg">
