--- a/MJ-13/MJ-13/Views/LiderV/Details.cshtml
+++ b/MJ-13/MJ-13/Views/LiderV/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MJ_13.Models.LideresV
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Info";
 }
 
-<h2>Details</h2>
+<h2>Info</h2>
 
 <div>
-    <h4>LideresV</h4>
+    <h4>Lideres Virtual</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Regresar a la lista", "Index")
 </p>
