--- a/MJ-13/MJ-13/Views/Predicador/Delete.cshtml
+++ b/MJ-13/MJ-13/Views/Predicador/Delete.cshtml
@@ -1,24 +1,16 @@
 ﻿@model MJ_13.Models.Predicadores
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Esta seguro de querer eliminar este registro?</h3>
 <div>
     <h4>Predicadores</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Tipo.Tipo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tipo.Tipo)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -44,6 +36,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Tipo.Tipo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tipo.Tipo)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Localidad)
         </dt>
 
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Regresar a la lista", "Index")
         </div>
     }
 </div>
