--- a/MJ-13/MJ-13/Views/Predicador/Details.cshtml
+++ b/MJ-13/MJ-13/Views/Predicador/Details.cshtml
@@ -1,23 +1,15 @@
 ﻿@model MJ_13.Models.Predicadores
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Info";
 }
 
-<h2>Details</h2>
+<h2>Info</h2>
 
 <div>
     <h4>Predicadores</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Tipo.Tipo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tipo.Tipo)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -43,6 +35,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Tipo.Tipo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tipo.Tipo)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Localidad)
         </dt>
 
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Regresar a la lista", "Index")
 </p>
