--- a/MJ-13/MJ-13/Views/Programa/Delete.cshtml
+++ b/MJ-13/MJ-13/Views/Programa/Delete.cshtml
@@ -1,30 +1,30 @@
 ﻿@model MJ_13.Models.Programas
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Esta seguro de querer eliminar este registro?</h3>
 <div>
     <h4>Programas</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Lider.Nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Lider.Nombre)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Programa)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Programa)
+        </dd>
+
+        <dt>
+            Encargado
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Lider.Nombre)
         </dd>
 
         <dt>
@@ -49,8 +49,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Regresar a la lista", "Index")
         </div>
     }
 </div>
