--- a/MJ-13/MJ-13/Views/Programa/Index.cshtml
+++ b/MJ-13/MJ-13/Views/Programa/Index.cshtml
@@ -4,18 +4,18 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Programas</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear nuevo", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Lider.Nombre)
+            @Html.DisplayNameFor(model => model.Programa)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Programa)
+            Encargado
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Descripcion)
@@ -29,10 +29,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Lider.Nombre)
+            @Html.DisplayFor(modelItem => item.Programa)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Programa)
+            @Html.DisplayFor(modelItem => item.Lider.Nombre)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Descripcion)
@@ -41,9 +41,9 @@
             @Html.DisplayFor(modelItem => item.Observaciones)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
+            @Html.ActionLink("Info", "Details", new { id = item.ID }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id = item.ID })
         </td>
     </tr>
 }
