--- a/MJ-13/MJ-13/Views/Tarea/Details.cshtml
+++ b/MJ-13/MJ-13/Views/Tarea/Details.cshtml
@@ -1,23 +1,15 @@
 ﻿@model MJ_13.Models.Tareas
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Info";
 }
 
-<h2>Details</h2>
+<h2>Info</h2>
 
 <div>
     <h4>Tareas</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Lider.Nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Lider.Nombre)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Tarea)
         </dt>
@@ -27,7 +19,15 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaInicio)
+            Encargado
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Lider.Nombre)
+        </dd>
+
+        <dt>
+            Fecha Inicio
         </dt>
 
         <dd>
@@ -35,7 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaFinal)
+            Fecha Final
         </dt>
 
         <dd>
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Regresar a la lista", "Index")
 </p>
