--- a/MJ-13/MJ-13/Views/Actividad/Create.cshtml
+++ b/MJ-13/MJ-13/Views/Actividad/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MJ_13.Models.Actividades
 
 @{
-    ViewBag.Title = "Nueva Actividad";
+    ViewBag.Title = "Crear";
 }
 
 <h2>Crear</h2>
@@ -138,7 +138,7 @@
 }
 
 <div>
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
 
 @section Scripts {
