--- a/MJ-13/MJ-13/Views/Actividad/Index.cshtml
+++ b/MJ-13/MJ-13/Views/Actividad/Index.cshtml
@@ -27,7 +27,7 @@
             Encargado
         </th>
         <th>
-            Actividad Ludica
+            Ludica
         </th>
         <th>
             Dirige
@@ -36,7 +36,7 @@
             Predicador
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Predicador.Tipo)
+            Tipo
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Tema)
