--- a/MJ-13/MJ-13/Views/Lider/Create.cshtml
+++ b/MJ-13/MJ-13/Views/Lider/Create.cshtml
@@ -48,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
 
 @section Scripts {
