--- a/MJ-13/MJ-13/Views/Lider/Index.cshtml
+++ b/MJ-13/MJ-13/Views/Lider/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<MJ_13.Models.Lideres>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lideres";
 }
 
 <h2>Lideres</h2>
 
 <p>
-    @Html.ActionLink("Crear nuevo", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
