--- a/MJ-13/MJ-13/Views/Miembro/Index.cshtml
+++ b/MJ-13/MJ-13/Views/Miembro/Index.cshtml
@@ -1,18 +1,21 @@
 ﻿@model IEnumerable<MJ_13.Models.Miembros>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Miembros";
 }
 
 <h2>Miembros</h2>
 
 <p>
-    @Html.ActionLink("Crear nuevo", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Nickname)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Telefono)
@@ -30,6 +33,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Nickname)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Telefono)
