--- a/MJ-13/MJ-13/Views/Shared/_Layout.cshtml
+++ b/MJ-13/MJ-13/Views/Shared/_Layout.cshtml
@@ -1,18 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - MJ13</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <style>
-        h1, h2, h3, h4{
+        h1, h2{
+            color: #c03b7a;
+        }
+        h3, h4 {
             color: #703e8f;
         }
-        p, th, td{
+        p, th, td {
             color: #141e4d;
+        }
+        body{
+            background-color: #eedd79;
+        }
+        .form-group, .dl-horizontal {
+            color: #703e8f;
         }
     </style>
 </head>
