--- a/MJ-13/MJ-13/Views/Tarea/Delete.cshtml
+++ b/MJ-13/MJ-13/Views/Tarea/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Eliminar</h2>
 
-<h3>¿Esta seguro de querer eliminar este registro?</h3>
+<h3>¿Estas seguro que querer borrar este registro?</h3>
 <div>
     <h4>Tareas</h4>
     <hr />
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            Fecha Inicio
+            @Html.DisplayNameFor(model => model.FechaInicio)
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            Fecha Final
+            @Html.DisplayNameFor(model => model.FechaFinal)
         </dt>
 
         <dd>
@@ -50,7 +50,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Eliminar" class="btn btn-default" /> |
-            @Html.ActionLink("Regresar a la lista", "Index")
+            @Html.ActionLink("Regresar", "Index")
         </div>
     }
 </div>
