--- a/MJ-13/MJ-13/Views/TipoP/Index.cshtml
+++ b/MJ-13/MJ-13/Views/TipoP/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<MJ_13.Models.TipoP>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "TipoP";
 }
 
 <h2>Tipos de Predicadores</h2>
 
 <p>
-    @Html.ActionLink("Crear nuevo", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
