--- a/MJ-13/MJ-13/Views/Lider/Edit.cshtml
+++ b/MJ-13/MJ-13/Views/Lider/Edit.cshtml
@@ -50,7 +50,7 @@
 }
 
 <div>
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
 
 @section Scripts {
