--- a/MJ-13/MJ-13/Views/Miembro/Details.cshtml
+++ b/MJ-13/MJ-13/Views/Miembro/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MJ_13.Models.Miembros
 
 @{
-    ViewBag.Title = "Info";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Info</h2>
+<h2>Detalles</h2>
 
 <div>
     <h4>Miembros</h4>
@@ -16,6 +16,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Nombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Nickname)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Nickname)
         </dd>
 
         <dt>
@@ -46,5 +54,5 @@
 </div>
 <p>
     @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </p>
