--- a/MJ-13/MJ-13/Views/Predicador/Delete.cshtml
+++ b/MJ-13/MJ-13/Views/Predicador/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Eliminar</h2>
 
-<h3>¿Esta seguro de querer eliminar este registro?</h3>
+<h3>¿Estas seguro que querer borrar este registro?</h3>
 <div>
     <h4>Predicadores</h4>
     <hr />
@@ -44,6 +44,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Clasificacion.Clasificacion)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Clasificacion.Clasificacion)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Localidad)
         </dt>
 
@@ -58,7 +66,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Eliminar" class="btn btn-default" /> |
-            @Html.ActionLink("Regresar a la lista", "Index")
+            @Html.ActionLink("Regresar", "Index")
         </div>
     }
 </div>
