--- a/MJ-13/MJ-13/Views/Predicador/Details.cshtml
+++ b/MJ-13/MJ-13/Views/Predicador/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MJ_13.Models.Predicadores
 
 @{
-    ViewBag.Title = "Info";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Info</h2>
+<h2>Detalles</h2>
 
 <div>
     <h4>Predicadores</h4>
@@ -43,6 +43,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Clasificacion.Clasificacion)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Clasificacion.Clasificacion)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Localidad)
         </dt>
 
@@ -54,5 +62,5 @@
 </div>
 <p>
     @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </p>
