--- a/MJ-13/MJ-13/Views/Predicador/Edit.cshtml
+++ b/MJ-13/MJ-13/Views/Predicador/Edit.cshtml
@@ -50,6 +50,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.ClasificacionID, "ClasificacionID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("ClasificacionID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ClasificacionID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Localidad, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Localidad, new { htmlAttributes = new { @class = "form-control" } })
@@ -66,7 +74,7 @@
 }
 
 <div>
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
 
 @section Scripts {
