--- a/MJ-13/MJ-13/Views/Predicador/Index.cshtml
+++ b/MJ-13/MJ-13/Views/Predicador/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<MJ_13.Models.Predicadores>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Predicadores";
 }
 
 <h2>Predicadores</h2>
 
 <p>
-    @Html.ActionLink("Crear nuevo", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -22,6 +22,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Tipo.Tipo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Clasificacion.Clasificacion)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Localidad)
@@ -42,6 +45,9 @@
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.Tipo.Tipo)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Clasificacion.Clasificacion)
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.Localidad)
