--- a/MJ-13/MJ-13/Views/Programa/Create.cshtml
+++ b/MJ-13/MJ-13/Views/Programa/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
