--- a/MJ-13/MJ-13/Views/Tarea/Create.cshtml
+++ b/MJ-13/MJ-13/Views/Tarea/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
 
 @section Scripts {
