--- a/MJ-13/MJ-13/Views/Tarea/Details.cshtml
+++ b/MJ-13/MJ-13/Views/Tarea/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MJ_13.Models.Tareas
 
 @{
-    ViewBag.Title = "Info";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Info</h2>
+<h2>Detalles</h2>
 
 <div>
     <h4>Tareas</h4>
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            Fecha Inicio
+            @Html.DisplayNameFor(model => model.FechaInicio)
         </dt>
 
         <dd>
@@ -35,7 +35,7 @@
         </dd>
 
         <dt>
-            Fecha Final
+            @Html.DisplayNameFor(model => model.FechaFinal)
         </dt>
 
         <dd>
@@ -46,5 +46,5 @@
 </div>
 <p>
     @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </p>
