--- a/MJ-13/MJ-13/Views/TipoP/Create.cshtml
+++ b/MJ-13/MJ-13/Views/TipoP/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Tipo Predicador</h4>
+        <h4>Tipo de Predicador</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,7 +32,7 @@
 }
 
 <div>
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
 
 @section Scripts {
