--- a/MJ-13/MJ-13/Views/TipoP/Delete.cshtml
+++ b/MJ-13/MJ-13/Views/TipoP/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Eliminar</h2>
 
-<h3>¿Esta seguro de querer eliminar este registro?</h3>
+<h3>¿Estas seguro que querer borrar este registro?</h3>
 <div>
-    <h4>Tipo Predicador</h4>
+    <h4>Tipo de Predicador</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,7 +26,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Eliminar" class="btn btn-default" /> |
-            @Html.ActionLink("Regresar a la lista", "Index")
+            @Html.ActionLink("Regresar", "Index")
         </div>
     }
 </div>
