--- a/MJ-13/MJ-13/Views/TipoP/Details.cshtml
+++ b/MJ-13/MJ-13/Views/TipoP/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MJ_13.Models.TipoP
 
 @{
-    ViewBag.Title = "Info";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Info</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>Tipo Predicador</h4>
+    <h4>Tipo de Predicador</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Regresar a la lista", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Back to List", "Index")
 </p>
