--- a/MJ-13/MJ-13/Views/TipoP/Edit.cshtml
+++ b/MJ-13/MJ-13/Views/TipoP/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Tipo Predicador</h4>
+        <h4>Tipo de Predicador</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -34,7 +34,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
 
 @section Scripts {
